[metadata]
name = classic-http-auth
version = 0.1.0
description = Authentication and authorization
author = Sergei Variasov, Arsen Abakarov
author_email = variasov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic-http-auth
project_urls =
    Bug Tracker = https://github.com/variasov/classic-http-auth/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find_namespace:
python_requires = >=3.7
install_requires =
    classic-app-layer~=0.0.1
    backports.cached-property~=1.0.1

package_dir =
    = sources

[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=6.2.2
    pytest-cov~=2.11.1
    twine~=3.3.0
    build~=0.2.1
    isort~=5.8.0
    yapf~=0.31.0
